--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "name": "preprocess.ipynb",
       "provenance": [],
-      "mount_file_id": "1W3hVQqe-kn6lH_v20eywsKUMDUVGQeEJ",
-      "authorship_tag": "ABX9TyOYne5QMQDx6C3cnyYbbqvL",
+      "mount_file_id": "1xnpCr1kDHPvvhg_Iq84JFF1P3p8EVX9Y",
+      "authorship_tag": "ABX9TyOdnotY+M+49imLp21/ir5H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,25 +22,29 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hm81/gazou/blob/referrense/preprocess.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Gw0496/gazoubunrui/blob/master/preprocess.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TcKlo5unMw2h",
+        "id": "aP-e3PQw0_aK",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 123
         },
-        "outputId": "e0d1cf12-0398-4c69-a540-e44f20537a6a"
+        "outputId": "33c792ee-9a3a-4e4a-a8a7-74402d6f5a69"
       },
       "source": [
         "import sys\n",
         "sys.path.append('/content/drive/My Drive/gazoubunrui')\n",
         "\n",
         "import ic_module as ic\n",
+        "\n",
+        "import importlib\n",
+        "importlib.reload(ic)\n",
+        "\n",
         "import os.path as op\n",
         "\n",
         "i = 0\n",
@@ -61,29 +65,16 @@
         {
           "output_type": "stream",
           "text": [
-            ">>「Robert Downey jr」の画像のあるディレクトリ ： /content/drive/My Drive/gazoubunrui/face/Robert Downey jr\n",
-            ">> /content/drive/My Drive/gazoubunrui/face/Robert Downey jrから80個のファイル読み込み成功\n",
-            ">>「Chris Evans」の画像のあるディレクトリ ： /content/drive/My Drive/gazoubunrui/face/Chris Evans\n",
-            ">> /content/drive/My Drive/gazoubunrui/face/Chris Evansから68個のファイル読み込み成功\n",
-            ">>「Chris Hemsworth」の画像のあるディレクトリ ： /content/drive/My Drive/gazoubunrui/face/Chris Hemsworth\n",
-            ">> /content/drive/My Drive/gazoubunrui/face/Chris Hemsworthから84個のファイル読み込み成功\n"
+            ">>「akimoto」の画像のあるディレクトリ ： /content/drive/My Drive/gazoubunrui/face/akimoto\n",
+            ">> /content/drive/My Drive/gazoubunrui/face/akimotoから68個のファイル読み込み成功\n",
+            ">>「shiraishi」の画像のあるディレクトリ ： /content/drive/My Drive/gazoubunrui/face/nishino\n",
+            ">> /content/drive/My Drive/gazoubunrui/face/nishinoから100個のファイル読み込み成功\n",
+            ">>「nishino」の画像のあるディレクトリ ： /content/drive/My Drive/gazoubunrui/face/shhiraishi\n",
+            ">> /content/drive/My Drive/gazoubunrui/face/shhiraishiから76個のファイル読み込み成功\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "17vECa-IT4Qd",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
